// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should render a card-like div by default 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
  background-color: #fff;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

<div
  className="glamor-0"
>
  Hello, world!
</div>
`;

exports[`Card should take any css props as usual 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 10px;
  background-color: hotpink;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

<div
  className="glamor-0"
>
  Hello, world!
</div>
`;

exports[`Card should take any props that the underlying component takes 1`] = `
.glamor-0,
[data-glamor-0] {
  display: -webkit-box;
  display: -moz-box;
  display: -ms-flexbox;
  display: -webkit-flex;
  display: flex;
  flex-direction: column;
  padding: 1.25rem;
  background-color: #fff;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
}

<div
  className="glamor-0"
>
  <div>
    first
  </div>
  <div>
    second
  </div>
</div>
`;
